# crala_ros

./: .gitignore  AUTOWARE_CARLA_L3_ARCHITECTURE.md  AUTOWARE_CARLA_L3_RUNBOOK.md  LICENSE  README.md  carla-ros-bridge.code-workspace
scripts/: autoware_io_hub.py  autoware_l3_workflow.sh  autoware_prepare_route.py  basic_agent_hmi_loop.py  clear_scenario_flags.sh  ensure_carla_world.py  enter_l3_mode.sh  env_carla915.sh  env_ros_l3.sh  exit_l3_mode.sh  prepare_autoware_route.sh  publish_automation_request.sh  publish_empty_objects.py  publish_fallback_trajectory.py  publish_force_mrm.sh  publish_system_available.sh  publish_td_request.sh  ros_wait_for_topic.py  set_autoware_speed_limit.sh  start_autoware_e2e_carla.sh  start_carla_3000.sh  start_l3_overlay.sh  stop_autoware_l3_stack.sh
src/: carla-ros-bridge
src/carla_scene_bridge/: package.xml  setup.cfg  setup.py
src/carla_scene_bridge/launch/: carla_scene_bridge.launch.py
src/carla_scene_bridge/resource/: carla_scene_bridge
src/carla_scene_bridge/src/carla_scene_bridge/: carla_scene_bridge_node.py  hazard_assessor_node.py
src/external_dms_pose/: package.xml  setup.cfg  setup.py
src/external_dms_pose/resource/: external_dms_pose
src/external_dms_pose/src/external_dms_pose/: __init__.py  external_dms_pose_node.py  runtime_deps.py
src/l3_interfaces/: CMakeLists.txt  package.xml
src/l3_interfaces/msg/: GroundTruthObject.msg  GroundTruthObjectArray.msg  HazardContext.msg  RoadInfo.msg
src/l3_supervisor/: package.xml  setup.cfg  setup.py
src/l3_supervisor/config/: l3_lightweight.params.yaml
src/l3_supervisor/launch/: l3_lightweight_stack.launch.py
src/l3_supervisor/src/l3_supervisor/: __init__.py  l3_supervisor_node.py
