<?xml version="1.0"?>
<package format="3">
  <name>external_dms_pose</name>
  <version>0.1.0</version>
  <description>External DMS camera bridge with head pose publishing for ROS 2.</description>
  <maintainer email="vci@local">vci</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
