<?xml version="1.0"?>
<package format="3">
  <name>l3_supervisor</name>
  <version>0.1.0</version>
  <description>L3 takeover and minimal-risk supervisor for CARLA and DMS ROS 2 topics.</description>
  <maintainer email="vci@local">vci</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>l3_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
